--- a/reveal.js/bower.json
+++ b/reveal.js/bower.json
@@ -5,18 +5,18 @@
     "js/reveal.js",
     "css/reveal.css"
   ],
-  "homepage": "http://lab.hakim.se/reveal-js/",
+  "homepage": "https://github.com/lydiali9/PPT_reveal/",
   "license": "MIT",
   "description": "The HTML Presentation Framework",
   "authors": [
-    "Hakim El Hattab <hakim.elhattab@gmail.com>"
+    "Lynn Li <64823000@qq.com>"
   ],
   "dependencies": {
     "headjs": "~1.0.3"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git@github.com:lydiali9/PPT_reveal.git"
   },
   "ignore": [
     "**/.*",
